# theo

./: .rustfmt.toml  Cargo.toml
.cargo/: config.toml
cpu_interrupts/: Cargo.toml
cpu_interrupts/src/: constants.rs  default_exception_handlers.rs  global_descriptor_table.rs  interrupt_descriptor_table.rs  lib.rs  programmable_interface_controller.rs
extra/01-freestanding-binary/: gdb_output  linker_error
keyboard/: Cargo.toml
keyboard/src/: lib.rs
machine_targets/: notes.md  theo-experimental.json  theo.json
machine_targets/explained/: theo-experimental.txt  theo.txt
paged_memory/: Cargo.toml  rustc-ice-2023-12-26T14_17_32-96281.txt
paged_memory/src/: lib.rs
src/: interrupts.rs  main.rs  memory.rs  peripherals.rs  qemu.rs  serial.rs  traits.rs
vga/: Cargo.toml
vga/frame_buffer/: Cargo.toml
vga/frame_buffer/src/: lib.rs
vga/src/: lib.rs
vga/text_buffer/: Cargo.toml
vga/text_buffer/src/: lib.rs
