[package]
name = "cpu_interrupts"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pic8259 = { git = "https://github.com/Virux/pic8259", version = "0.10.2" }
spin = "0.9.8"
x86_64 = { version = "0.14.10", features = ["inline_asm", "external_asm"] }
