workspace = { members = [ "frame_buffer","text_buffer"] }

[package]
name = "vga"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame_buffer = { version = "0.1.0", path = "frame_buffer" }
text_buffer = { version = "0.1.0", path = "text_buffer" }
